--- a/src/main/resources/assets/rccosmetic/lang/en_US.lang
+++ b/src/main/resources/assets/rccosmetic/lang/en_US.lang
@@ -21,14 +21,16 @@ item.train.operator.legs.name=Train Operator Leggins
 item.train.operator.boots.name=Train Operator Boots
 item.whistle.name=Whistle
 item.wheels.name=Cart Wheels
-item.cart.modelled.quarry.name=Quarry Cart
-item.cart.modelled.liquid.name=Tanker Cart
+item.double_rod_iron.name=Double Iron Rods
+item.cart.modelled.open.name=Open Cart
+item.cart.modelled.tanker.name=Tanker Cart
 item.cart.modelled.wood.name=Wood Cart
-item.cart.modelled.empty.name=Flat Cart
+item.cart.modelled.flat.name=Flat Cart
 item.cart.modelled.panzer.name=Panzer Cart
 item.cart.modelled.container.name=Container Cart
+item.cart.modelled.tender.name=Tender Cart
 itemGroup.tabRCCos=RailCraft Cosmetic Additions
-entity.rccosmetic.modelledtankcart.name=Tanker Cart
+entity.rccosmetic.cart.1.name=Tanker Cart
 entity.rccosmetic.cart.0.name=Quarry Cart
 entity.rccosmetic.cart.2.name=Wood Cart
 entity.rccosmetic.cart.3.name=Flat Cart
