Build 3.0.2 - Recipes made properly, so they are available even when certain blocks aren't (railcraft tank for example, or if you disable plates) - fixes NEI crash with recipe using nonexistant block. - Hand signals, two variants, dispatch and stop one. Probably most of world is not using them already, but in certain railroad-centered countries those were used extensively. Maybe in future will add flag/light variants. -Train Dispatcher Cap, red variant of existing one. Also used extensively in certain countries.

--- a/src/main/resources/assets/rccosmetic/lang/en_US.lang
+++ b/src/main/resources/assets/rccosmetic/lang/en_US.lang
@@ -16,12 +16,15 @@ tile.track.cobweb.name=Cobweb Track
 item.semaphore.arm.name=Signal Arm
 item.sign.blank.name=Blank Sign
 item.train.operator.cap.name=Train Operator Cap
+item.train.operator.red.cap.name=Train Dispatcher Cap
 item.train.operator.chest.name=Train Operator Chest
 item.train.operator.legs.name=Train Operator Leggins
 item.train.operator.boots.name=Train Operator Boots
 item.whistle.name=Whistle
 item.wheels.name=Cart Wheels
 item.double_rod_iron.name=Double Iron Rods
+item.handdepartsignal.name=Departure Signal
+item.handstopsignal.name=Stop Signal
 item.cart.modelled.open.name=Open Cart
 item.cart.modelled.tanker.name=Tanker Cart
 item.cart.modelled.wood.name=Wood Cart
