--- a/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
+++ b/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
@@ -16,12 +16,15 @@ tile.track.cobweb.name=蛛网轨道
 item.semaphore.arm.name=信号臂
 item.sign.blank.name=空白标志
 item.train.operator.cap.name=火车司机帽子
+item.train.operator.red.cap.name=Train Dispatcher Cap
 item.train.operator.chest.name=火车司机上衣
 item.train.operator.legs.name=火车司机裤子
 item.train.operator.boots.name=火车司机鞋子
 item.whistle.name=口哨
 item.wheels.name=车轮
 item.double_rod_iron.name=工字钢杆
+item.handdepartsignal.name=Departure Signal
+item.handstopsignal.name=Stop Signal
 item.cart.modelled.open.name=敞篷车
 item.cart.modelled.tanker.name=罐车
 item.cart.modelled.wood.name=原木车
