--- a/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
+++ b/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
@@ -16,7 +16,7 @@ tile.track.cobweb.name=蛛网轨道
 item.semaphore.arm.name=信号臂
 item.sign.blank.name=空白标志
 item.train.operator.cap.name=火车司机帽子
-item.train.operator.red.cap.name=火车司机帽子
+item.train.operator.red.cap.name=列车调度员帽子
 item.train.operator.chest.name=火车司机上衣
 item.train.operator.legs.name=火车司机裤子
 item.train.operator.boots.name=火车司机鞋子
