--- a/src/main/resources/assets/rccosmetic/lang/en_US.lang
+++ b/src/main/resources/assets/rccosmetic/lang/en_US.lang
@@ -7,10 +7,10 @@ tile.sign.mph5.name=Speed Limit Sign
 tile.sign.clearance.name=Limited Clearance Sign
 tile.sign.refuge.name=Limited Refuge Sign
 tile.sign.shunt.name=Limit Of Shunt Sign
-tile.platform.floor.name=Platform
-tile.platform.edge.name=Platform Edge
-tile.platform.edge.line.name=Platform Edge With Line
-tile.platform.transition.name=Platform Transition
+tile.platformfull.name=Platform
+tile.platformedge.name=Platform Edge
+tile.platforminner.name=Platform Inner Edge
+tile.platformouter.name=Platform Outer Edge
 tile.track.grass.name=Grass Track
 tile.track.cobweb.name=Cobweb Track
 item.semaphore.arm.name=Signal Arm
@@ -39,4 +39,6 @@ entity.rccosmetic.cart.2.name=Wood Cart
 entity.rccosmetic.cart.3.name=Flat Cart
 entity.rccosmetic.cart.4.name=Panzer Cart
 entity.rccosmetic.cart.5.name=Container Cart
+tooltip.platform.crowbar=Use Crowbar to rotate
+tooltip.platform.spikemaul=Use Spike Maul to change Shape
 
