--- a/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
+++ b/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
@@ -7,10 +7,10 @@ tile.sign.mph5.name=限速标志
 tile.sign.clearance.name=限距标志
 tile.sign.refuge.name=Limited Refuge Sign
 tile.sign.shunt.name=分流标志
-tile.platform.floor.name=站台
-tile.platform.edge.name=站台边缘
-tile.platform.edge.line.name=带线的站台边缘
-tile.platform.transition.name=站台过渡段
+tile.platformfull.name=站台
+tile.platformedge.name=站台边缘
+tile.platforminner.name=Platform Inner Edge
+tile.platformouter.name=Platform Outer Edge
 tile.track.grass.name=草地轨道
 tile.track.cobweb.name=蛛网轨道
 item.semaphore.arm.name=信号臂
@@ -39,4 +39,5 @@ entity.rccosmetic.cart.2.name=原木车
 entity.rccosmetic.cart.3.name=板车
 entity.rccosmetic.cart.4.name=装甲车
 entity.rccosmetic.cart.5.name=集装箱车
-
+tooltip.platform.crowbar=Use Crowbar to rotate
+tooltip.platform.spikemaul=Use Spike Maul to change Shape
