--- a/src/main/resources/assets/rccosmetic/lang/en_US.lang
+++ b/src/main/resources/assets/rccosmetic/lang/en_US.lang
@@ -32,6 +32,7 @@ item.cart.modelled.flat.name=Flat Cart
 item.cart.modelled.panzer.name=Panzer Cart
 item.cart.modelled.container.name=Container Cart
 item.cart.modelled.tender.name=Tender Cart
+item.cart.modelled.cage.name=Cage Cart
 itemGroup.tabRCCos=RailCraft Cosmetic Additions
 entity.rccosmetic.cart.1.name=Tanker Cart
 entity.rccosmetic.cart.0.name=Quarry Cart
@@ -39,6 +40,8 @@ entity.rccosmetic.cart.2.name=Wood Cart
 entity.rccosmetic.cart.3.name=Flat Cart
 entity.rccosmetic.cart.4.name=Panzer Cart
 entity.rccosmetic.cart.5.name=Container Cart
+entity.rccosmetic.cart.6.name=Tender Cart
+entity.rccosmetic.cart.7.name=Cage Cart
 tooltip.platform.crowbar=Use Crowbar to rotate
 tooltip.platform.spikemaul=Use Spike Maul to change Shape
 
