--- a/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
+++ b/src/main/resources/assets/rccosmetic/lang/zh_CN.lang
@@ -33,6 +33,7 @@ item.cart.modelled.panzer.name=装甲车
 item.cart.modelled.container.name=集装箱车
 item.cart.modelled.tender.name=蒸汽机车
 item.cart.modelled.cage.name=Cage Cart
+item.cart.modelled.couch.name=Couch Cart
 itemGroup.tabRCCos=RailCraft Cosmetic Additions
 entity.rccosmetic.cart.1.name=油罐车
 entity.rccosmetic.cart.0.name=采石车
@@ -42,5 +43,6 @@ entity.rccosmetic.cart.4.name=装甲车
 entity.rccosmetic.cart.5.name=集装箱车
 entity.rccosmetic.cart.6.name=Tender Cart
 entity.rccosmetic.cart.7.name=Cage Cart
+entity.rccosmetic.cart.8.name=Couch Cart
 tooltip.platform.crowbar=Use Crowbar to rotate
 tooltip.platform.spikemaul=Use Spike Maul to change Shape
