--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 Changelog
 ---------
 
+Build 3.0.6
+- Updated for Railcraft 10.4.1 
+- minor changes in preparation for next updates
 
 Build 3.0.5
 - fixed carts not opening due to usage of clientside function. Affected servers.
